# geodesy-wasm

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  REQUIREMENTS.md  build_wasm.sh
.github/workflows/: ci.yml
bindings/: embind.cpp
include/geo/: format.hpp  geodesic.hpp  geometry.hpp  intersection.hpp  magnetic.hpp  radar.hpp  tactical.hpp  track.hpp  types.hpp
src/: format.cpp  geodesic.cpp  geometry.cpp  intersection.cpp  magnetic.cpp  radar.cpp  tactical.cpp  track.cpp
tests/: format.test.cpp  geodesic.test.cpp  geometry.test.cpp  intersection.test.cpp  magnetic.test.cpp  radar.test.cpp  tactical.test.cpp  track.test.cpp
web/: geo.js  geo.wasm  smoke.mjs
